--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+.idea/vcs.xml
+.idea/project-template.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/description.html
